Make post updates

--- a/_posts/2020-01-01-genie.md
+++ b/_posts/2020-01-01-genie.md
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Introducing Genie 1.0
-image: '/images/pages/genie.jpg'
+title: Introducing Genie
+image: '/images/genie.png'
 ---
 
 After careful deliberation and thorough testing with our Facebook bots under my Startbucks alter ego Emma and [Natalia](https://github.com/nataliamoran)'s Russian mascot Boris Petrov, Genie was released. Genie, built on Python, sends your pre-drafted heartfelt birthday wishes to your Facebook friends.
