--- a/_posts/2020-05-20-poet.md
+++ b/_posts/2020-05-20-poet.md
@@ -1,13 +1,14 @@
 ---
-layout: post-light-feature
+layout: post-no-feature
 title: Poet
-description: "A lightweight Chrome extension that displays a new poem every day upon new tab launches."
 categories: articles
-image:
-        feature: poet1.png
+image: '/images/poet1.png'
 ---
 
-## Installation
+Poet is a lightweight Chrome extension that displays a new poem every day upon new tab launches. 
+
+Motivation: I caught myself never reading enough (to be pefectly honest, zero these days). I feel a little stuck in this hustle-bustle. I hope this brings you some solace and, more importantly, literacy...
+
 Download Poet from the <a href="https://chrome.google.com/webstore/detail/poet/hkjjflfleaejocakemkheofjcmkepbcm"> Chrome extension web store.
 
 <p align="center">
@@ -28,7 +29,6 @@ Add poems to your favourites.
 View and manage your saved poems.
 <br>
 <img src="https://imgur.com/c3tUqx4.gif" alt="Manage poems" height="400px">
-<br>
 </p>
 <br>
 
@@ -39,4 +39,4 @@ Refresh for a new poem.
 <br>
 </p>
 
-Check out the source code on my <a href="https://github.com/chuyunshen/poet"> GitHub
+Check out the source code on my <a href="https://github.com/chuyunshen/poet"> GitHub.
