--- a/_posts/2020-05-20-poet.md
+++ b/_posts/2020-05-20-poet.md
@@ -2,7 +2,7 @@
 layout: post-no-feature
 title: Poet
 categories: articles
-image: '/images/poet1.png'
+image: '/images/poet3.gif'
 ---
 
 Poet is a lightweight Chrome extension that displays a new poem every day upon new tab launches. 
