--- a/_posts/2020-05-30-big-fuss.md
+++ b/_posts/2020-05-30-big-fuss.md
@@ -2,6 +2,11 @@
 layout: post-no-feature
 title: Big Fuss
 categories: articles
+image: '/images/big-fuss.png'
 ---
 
 With React Native and Spring Boot, I wrote a party trivia app that will display user submitted questions.
+
+<p align="center">
+<img src='/images/big-fuss.png' alt="" width="700px">
+</p>
