Add Dependency Viewer project and make edits to the website

--- a/_posts/2020-01-01-genie.md
+++ b/_posts/2020-01-01-genie.md
@@ -4,13 +4,13 @@ title: Introducing Genie
 image: '/images/genie.png'
 ---
 
-After careful deliberation and thorough testing with our Facebook bots under my Startbucks alter ego Emma and [Natalia](https://github.com/nataliamoran)'s Russian mascot Boris Petrov, Genie was released. Genie, built on Python, sends your pre-drafted heartfelt birthday wishes to your Facebook friends.
+Genie, built on Python, sends your pre-drafted heartfelt birthday wishes to your Facebook friends.
+
+This is a collaborative project with [Natalia](https://github.com/nataliamoran).
 
 [Insert gif here.]
 
-Genie scrapes Facebook’s birthday calendar information. For Facebook friends who have not disclosed their birthday information on Facebook, users are also able to manually enter a birthday. Currently, the program requires users to log in every day to ensure the messages are sent. The logic is if the date matches a scheduled birthday, saved messages will be sent. However, in our next steps, we will be removing this barrier by taking it online.
-
-We are actively designing a web application for Genie, making the user experience more sleek. We are going cross-platform: soon enough, you won’t be limited to only Facebook. Users will be able to schedule birthday wishes that can be sent through text messages. We are also integrating holiday calendars—you will never miss to wish your mother in law a happy thanksgiving ever again.
+Genie scrapes Facebook’s birthday calendar information. For Facebook friends who have not disclosed their birthday information on Facebook, users are also able to manually enter a birthday.
 
 See the full code [**here**](https://github.com/chuyunshen/genie).
 
