Change genie image

--- a/_posts/2020-01-01-genie.md
+++ b/_posts/2020-01-01-genie.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Introducing Genie
-image: '/images/genie.png'
+image: '/images/genie-logo.png'
 ---
 
 Genie, built on Python, sends your pre-drafted heartfelt birthday wishes to your Facebook friends.
