--- a/_posts/2020-05-30-big-fuss.md
+++ b/_posts/2020-05-30-big-fuss.md
@@ -5,7 +5,7 @@ categories: articles
 image: '/images/big-fuss.png'
 ---
 
-With React Native and Spring Boot, I wrote a party trivia app that will display user submitted questions.
+With [React Native](https://reactnative.dev/) and [Spring Boot](https://spring.io/projects/spring-boot), I wrote a party trivia mobile (iOS and Android compatible) app that will display user submitted questions.
 
 <p align="center">
 <img src='/images/big-fuss.png' alt="" width="700px">
