Bio change and edit Poet post

--- a/_posts/2020-05-20-poet.md
+++ b/_posts/2020-05-20-poet.md
@@ -7,7 +7,7 @@ image: '/images/poet3.gif'
 
 Poet is a lightweight Chrome extension that displays a new poem every day upon new tab launches. 
 
-Download Poet from the <a href="https://chrome.google.com/webstore/detail/poet/hkjjflfleaejocakemkheofjcmkepbcm"> Chrome extension web store.
+Install Poet from the <a href="https://chrome.google.com/webstore/detail/poet/hkjjflfleaejocakemkheofjcmkepbcm" target="_blank"> Chrome extension web store.</a>
 
 <p align="center">
 Displays a new poem every day.
@@ -36,5 +36,9 @@ Refresh for a new poem.
 <img src="https://imgur.com/99xA9qf.gif" alt="Refresh poems" width="650px">
 <br>
 </p>
+
+### Tools:
+- User Interface: JavaScript, HTML, and CSS
+- [Chrome API](https://developer.chrome.com/docs/extensions/reference/): Service Worker to make REST calls and localStorage to store users' daily poem and favourite poems.
 
 Check out the source code on my <a href="https://github.com/chuyunshen/poet"> GitHub.
