Edit calligrapher post and change all markdown links to be anchor links that open in a new tab

--- a/_posts/2020-05-20-poet.md
+++ b/_posts/2020-05-20-poet.md
@@ -39,6 +39,6 @@ Refresh for a new poem.
 
 ### Tools:
 - User Interface: JavaScript, HTML, and CSS
-- [Chrome API](https://developer.chrome.com/docs/extensions/reference/): Service Worker to make REST calls and localStorage to store users' daily poem and favourite poems.
+- <a target="_blank" href="https://developer.chrome.com/docs/extensions/reference/">Chrome API</a>: Service Worker to make REST calls and localStorage to store users' daily poem and favourite poems.
 
-Check out the source code on my <a href="https://github.com/chuyunshen/poet"> GitHub.
+Check out the source code on my <a target="_blank" href="https://github.com/chuyunshen/poet">GitHub</a>.
