--- a/_posts/2020-05-30-big-fuss.md
+++ b/_posts/2020-05-30-big-fuss.md
@@ -5,10 +5,10 @@ categories: articles
 image: '/images/big-fuss.png'
 ---
 
-With [React Native](https://reactnative.dev/) and [Spring Boot](https://spring.io/projects/spring-boot), I wrote a party trivia mobile (iOS and Android compatible) app that will display user submitted questions.
+With <a target="_blank" href="https://reactnative.dev/">React Native</a> and <a target="_blank" href="https://spring.io/projects/spring-boot">Spring Boot</a>, I wrote a party trivia mobile (iOS and Android compatible) app that will display user submitted questions.
 
 <p align="center">
 <img src='/images/big-fuss.png' alt="" width="700px">
 </p>
 
-See the code [here](https://github.com/chuyunshen/big-fuss).
+See the code <a target="_blank" href="https://github.com/chuyunshen/big-fuss">here</a>.
