Add Traditou github link

--- a/_posts/2023-02-07-traditou.md
+++ b/_posts/2023-02-07-traditou.md
@@ -13,7 +13,7 @@ image: '/images/traditou/telequebec_screenshot2.png'
 </p>
 
 <p>Traditou has been submitted on the Chrome Web Store, pending approval.</p>
-<p></p>
+<p>Check out the repository on <a href="https://github.com/chuyunshen/traditou" target="_blank">GitHub</a>.</p>
 
 <p>Traditou intercepts the original subtitle files sent from the website servers, 
     parses them and displays the original subtitles along with English subtitles on the bottom, with Google translate.
