Update link in new post

--- a/_posts/2023-02-07-traditou.md
+++ b/_posts/2023-02-07-traditou.md
@@ -12,7 +12,7 @@ image: '/images/traditou/telequebec_screenshot2.png'
     <img id="main-gif" src="/images/traditou/demo.gif" style="width: 670px">
 </p>
 
-<p>Traditou has been submitted on the Chrome Web Store, pending approval.</p>
+<p>Find Traditou on the <a href="https://chrome.google.com/webstore/detail/traditou/bkjdjjgheofjpchhfpbnfcaklcboaoob" target="_blank">Chrome Web Store</a>.</p>
 <p>Check out the repository on <a href="https://github.com/chuyunshen/traditou" target="_blank">GitHub</a>.</p>
 
 <p>Traditou intercepts the original subtitle files sent from the website servers, 
