--- a/_posts/2023-02-07-traditou.md
+++ b/_posts/2023-02-07-traditou.md
@@ -12,20 +12,111 @@ image: '/images/traditou/telequebec_screenshot2.png'
     <img id="main-gif" src="/images/traditou/demo.gif" style="width: 670px">
 </p>
 
-<p>Find Traditou on the <a href="https://chrome.google.com/webstore/detail/traditou/bkjdjjgheofjpchhfpbnfcaklcboaoob" target="_blank">Chrome Web Store</a>.</p>
-<p>Check out the repository on <a href="https://github.com/chuyunshen/traditou" target="_blank">GitHub</a>.</p>
+### Introduction
+Find Traditou on the <a href="https://chrome.google.com/webstore/detail/traditou/bkjdjjgheofjpchhfpbnfcaklcboaoob" target="_blank">Chrome Web Store</a> and check out the repository on <a href="https://github.com/chuyunshen/traditou" target="_blank">GitHub</a>.
 
-<p>Traditou intercepts the original subtitle files sent from the website servers, 
-    parses them and displays the original subtitles along with English subtitles on the bottom, with Google translate.
-</p>
+Traditou finds the original subtitle files sent from the website servers, parses them and displays the original subtitles along with English subtitles on the bottom, with Google translate.
 
-<p>This extension can be used with the trifecta of French Canadian streaming websites: 
+This extension can be used with three French Canadian video streaming websites: 
     <a href="https://ici.tou.tv/" target="_blank">Tou.tv</a>, 
     <a href="https://noovo.ca" target="_blank">Noovo.ca</a>, 
-    and <a href="https://video.telequebec.tv/" target="_blank">TeleQuebec</a>, 
-    with the goal of French language learning in mind.</p>
-<p>Traditou not only matches words closely, it also transforms TV-style rolling captions 
-    (which are visually difficult to follow) into more readable streaming service style subtitles.</p> 
+    and <a href="https://video.telequebec.tv/" target="_blank">TeleQuebec</a>.
+
+Traditou not only matches words closely, it also transforms TV-style rolling captions (which are visually difficult to follow) into more readable streaming service style subtitles. 
+
+I made this extension so I can learn French by watching French Canadian content, while not needing to look up words for every sentence.
+
+### More Details on the How:
+I first go through the requests that are sent from websites' front-end to their respective servers to filter for requests that contain the keyword "vtt". Vtt files are the most common video subtitle format. 
+Depending on the website, the server could send one vtt file at the beginning of the video or many vtt files throughout the video. 
+
+After procuring the files, I then parse them, from rolling styles to regular streaming service styles. You can refer to the gif above for a visual idea. The subtitle files that are sent have a rolling style, with cues formatted like this below example. A cue is a single subtitle block that has a single start time, end time, and a piece of text. The cues are simplified with letters in the following example. <code>t</code> represents timestamps, while the rest of the letters represent a few words. For example, <code>a</code> could represent "They are taking", and <code>b</code> could represent "the Hobbits to Isengard."
+
+<code>
+cue #1: t1 -> t2
+<br>
+    a
+<br>
+    b
+<br>
+cue #2: t3 -> t4
+<br>
+    b
+<br>
+    c
+<br>
+cue #3: t5 -> t6
+<br>
+    c
+<br>
+    d
+<br>
+    e
+<br>
+cue #4: t7 -> t8
+<br>
+    d
+<br>
+    e
+<br>
+    f
+<br>
+cue #5: t8 -> t9
+<br>
+    e
+<br>
+    f
+<br>
+    g
+<br>
+cue #6: t9 -> t10
+<br>
+    f
+<br>
+    g
+<br>
+    h
+<br>
+</code>
+
+I parse files like the above to look like below:
+
+<code>
+cue #1: t1 -> t4
+<br>
+    a b c
+<br>
+cue #2: t4 -> t8
+<br>
+    d e f
+<br>
+cue #3: t8 -> t10
+<br>
+    g h
+<br>
+</code>
+
+Once I have generated clean subtitle data, I then create invisible elements on the page, with the French subtitle sentences inside. 
+One interesting thing that I noticed is that Chrome translates as users scroll a page. Chrome doesn't translate the whole page at a time to save computing power. So the placement of the invisible elements is important--it has to be in the video. Chrome also does not translate elements that have a css style of <code>display: none</code>, but <code>opacity: 0</code> does the trick.
+I opted for Google's page translate because it's free, unlike Google's translate API.
+
+After the translations are completed, new cues are then created with both the original and translated subtitles. They are then displayed on top of the video with the <code>&lt;track&gt;</code> element.
+
+Beyond the main functionality, there are a few small standard features like: adjusting the subtitle font size as users change their browser window size, move up the subtitle box when the video control bar (progress bar) is showing, and toggling different subtitle modes: dual subtitles, or French only, or English only.
+
+### Challenges
+All the video websites implement video solutions different. I have to write a fair amount of custom code for each website. It is difficult to maintain the project when websites' implementations change and it is time-consuming to add new support for new websites.
+
+Chrome's manifest V3 is not as forgiving as V2 in user permissions. My interpretation (mostly Internet's savvy developers' opinion) is that Google wants to deter the development of a few categories of extensions, namely adblockers (they are cutting into Google's core revenue stream) and tampermonkeys. The impact on Traditou is that now upon installation, Chrome shows users a warning that Traditou reads their browser history, as well as reads and changes their data, which makes Traditou look like malware. I still haven't found a way to counter that.
+
+At the beginning of the project, I was using Google's page translate to quickly translate elements that have subtitle texts in them, instead of working on batch vtt files. This resulted in subtitles that tend to flicker a lot. But parsing vtt files worked much better as I later found out.
+
+I also haven't found a way to skip the step where users have to right-click and translate the page. 
+
+Finally, the biggest challenge is that French Canadians speak too fast, even with this extension, I still have trouble following plots...
+
+### Name Credit
+Hugo (my boyfriend)'s mom came up with the name Traditou, for **tra**duire **di**rect **tou**s, meaning translate all directly. It is also a pun: tou for tou.tv and for tous, which means all. I think it's pretty clever.
 
 ### Tools
 - Frontend: JavaScript, HTML, CSS
